reduce warnings